fix: :bug: Fix minor for tests
